# agripath

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
models/: event.py  product.py
src/: display.py  menu.py
src/agripath/: config.py
src/agripath/cli/: display.py  menu.py
src/agripath/db/: database.py  db_models.py  init_db.py  mappers.py  repository.py
src/agripath/enums/: event_type.py
src/agripath/models/: event.py  product.py
src/agripath/utils/: separator.py
tests/: test_event.py  test_menu.py  test_product.py  test_prompt.py
tests/cli/: test_menu.py
tests/models/: test_event.py  test_product.py
tests/utils/: test_prompt.py
utils/: prompt.py
