[project]
name = "agripath"
version = "unreleased"
description = "A system that tracks the journey of an agricultural product from its origin to the final consumer."
readme = "README.md"
requires-python = ">=3.12.3"
authors = [
    { name = "Luís Antonio Manfredi Sodré", email = "luismanfredi920@gmail.com"}
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"