[project]
name = "agripath"
version = "0.3.2a0"
description = "A system that tracks the journey of an agricultural product from its origin to the final consumer."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Luís Antonio Manfredi Sodré", email = "luismanfredi920@gmail.com"}
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1,<10",
    "ruff>=0.15.10,<0.16",
    "mypy>=2.1.0,<3",
    "pre-commit>=4.6.0,<5",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
files = ["src", "main.py", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agripath = ["py.typed"]
